[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyMaCh3"
version = "0.0.1"
authors = [{ name = "The MaCh3 Collaboration" }]

[tool.scikit-build]
wheel.install-dir = "pyMaCh3"

[tool.scikit-build.cmake]
args = ["-DMaCh3_PYTHON_ENABLED=ON", "-DMaCh3_PYTHON_INSTALL_DIR=NONE"]
