[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyMaCh3"
authors = [{ name = "The MaCh3 Collaboration" }]

dynamic = ["version"]

[tool.scikit-build]
wheel.install-dir = "pyMaCh3"

[tool.scikit-build.cmake]
args = ["-DMaCh3_PYTHON_ENABLED=ON", "-DMaCh3_PYTHON_INSTALL_DIR=NONE"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.sdist]
include = ["src/package/_version.py"]

[tool.setuptools_scm]  # Section required
write_to = "_version.py"